src/codegen/tests/snapshots/rusty__codegen__tests__expression_tests__not_of_or_expression_on_bools.snap
---
source: src/codegen/tests/expression_tests.rs
assertion_line: 422
expression: result

---
; ModuleID = 'main'
source_filename = "main"

%main_interface = type { i8, i8 }

@main_instance = global %main_interface zeroinitializer

define void @main(%main_interface* %0) {
entry:
  %a = getelementptr inbounds %main_interface, %main_interface* %0, i32 0, i32 0
  %b = getelementptr inbounds %main_interface, %main_interface* %0, i32 0, i32 1
  %load_a = load i8, i8* %a, align 1
  %1 = zext i8 %load_a to i32
  %2 = icmp ne i32 %1, 0
  br i1 %2, label %5, label %3

3:                                                ; preds = %entry
  %load_b = load i8, i8* %b, align 1
  %4 = zext i8 %load_b to i32
  br label %5

5:                                                ; preds = %3, %entry
  %6 = phi i32 [ %1, %entry ], [ %4, %3 ]
  %7 = icmp ne i32 %6, 0
  %tmpVar = xor i1 %7, true
  ret void
}

