src/codegen/tests/snapshots/rusty__codegen__tests__expression_tests__simple_not_expression_on_bools.snap
---
source: src/codegen/tests/expression_tests.rs
assertion_line: 408
expression: result

---
; ModuleID = 'main'
source_filename = "main"

%main_interface = type { i8 }

@main_instance = global %main_interface zeroinitializer

define void @main(%main_interface* %0) {
entry:
  %a = getelementptr inbounds %main_interface, %main_interface* %0, i32 0, i32 0
  %load_a = load i8, i8* %a, align 1
  %1 = icmp ne i8 %load_a, 0
  %tmpVar = xor i1 %1, true
  ret void
}

